# snake

./: Cargo.toml  LICENSE  README.md
src/: event.rs  game.rs  interface.rs  main.rs  solver.rs
