[package]
name = "snake"
version = "0.1.0"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tui = { version = "0.18.0", default-features = false, features = ["termion"] }
termion = "1.5.6"

[features]
